--- a/index.html
+++ b/index.html
@@ -1,56 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Pacific Trails Resort</title>
-    <meta charset="utf-8">
-    <meta name="description"
-        content="Pacific Trails Resort offers you glamping in spacious and well-appointed private Yurts. All luxury campsites have an ocean view. Enjoy the zen and natural beauty of Big Sur at Pacific Trails Resort.">
-    <link rel="stylesheet" href="stylesheets/pacific.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Pacific Trails Resort offers you glamping in spacious and well-appointed private Yurts. All luxury campsites have an ocean view. Enjoy the zen and natural beauty of Big Sur at Pacific Trails Resort."
+    />
+    <link rel="stylesheet" href="stylesheets/pacific.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link href="sticky-footer-navbar.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Pacific Trails Resort</h1>
+      <h1>Pacific Trails Resort</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="yurts.html">Yurts</a></li>
-            <li><a href="activities.html">Activities</a></li>
-            <li><a href="reservations.html">Reservations</a></li>
-            <li><a href="shop.html">Shop</a></li>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">Pacific Trails Resort</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarCollapse"
+        aria-controls="navbarCollapse"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="yurts.html">Yurts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="activities.html">Activities</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="reservations.html">Reservations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="shop.html">Shop</a>
+          </li>
         </ul>
+      </div>
     </nav>
 
     <main>
-        <h2>Enjoy Nature in Luxury</h2>
-        <video controls="controls" poster="images/pacific.jpg" width="320" height="240">
-            <source src="videos/pacific.mp4" type="video/mp4">
-            <source src="videos/pacific.ogv" type="video/ogg">
-        </video>
-        <p>Pacific Trails Resort offers a special lodging experience on the California North
-            Coast with panoramic views of the Pacific Ocean. Your stay at Pacific Trails Resort includes a sumptuously
-            appointed private yurt and a cooked-to-order breakfast each morning.</p>
-        <ul>
-            <li>Unwind in the heated outdoor pool and whirlpool</li>
-            <li>Explore the coast on your own or join our guided tours</li>
-            <li>Relax in our lodge while enjoying complimentary appetizers and beverages</li>
-            <li>Savor nightly fine dining with an ocean view</li>
-        </ul>
-        <div>
-            Pacific Trails Resort<br>
-            12456 Pacific Trails Road<br>
-            Zephyr, CA 95555<br>
-            <a href="tel:888-555-5555">888-555-5555</a><br><br>
-        </div>
+      <h2>Enjoy Nature in Luxury</h2>
+      <video
+        controls="controls"
+        poster="images/pacific.jpg"
+        width="320"
+        height="240"
+      >
+        <source src="videos/pacific.mp4" type="video/mp4" />
+        <source src="videos/pacific.ogv" type="video/ogg" />
+      </video>
+      <p>
+        Pacific Trails Resort offers a special lodging experience on the
+        California North Coast with panoramic views of the Pacific Ocean. Your
+        stay at Pacific Trails Resort includes a sumptuously appointed private
+        yurt and a cooked-to-order breakfast each morning.
+      </p>
+      <ul>
+        <li>Unwind in the heated outdoor pool and whirlpool</li>
+        <li>Explore the coast on your own or join our guided tours</li>
+        <li>
+          Relax in our lodge while enjoying complimentary appetizers and
+          beverages
+        </li>
+        <li>Savor nightly fine dining with an ocean view</li>
+      </ul>
+      <div>
+        Pacific Trails Resort<br />
+        12456 Pacific Trails Road<br />
+        Zephyr, CA 95555<br />
+        <a href="tel:888-555-5555">888-555-5555</a><br /><br />
+      </div>
     </main>
 
     <footer>
-        Copyright &copy; 2024 Pacific Trails Resort<br>
-        <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+      Copyright &copy; 2024 Pacific Trails Resort<br />
+      <a href="mailto:yourfirstname@yourlastname.com"
+        >yourfirstname@yourlastname.com</a
+      >
     </footer>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
