--- a/reservations.html
+++ b/reservations.html
@@ -1,52 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Pacific Trails Resort</title>
-    <meta charset="utf-8">
-    <meta name="description"
-        content="Pacific Trails Resort offers you glamping in spacious and well-appointed private Yurts. All luxury campsites have an ocean view. Enjoy the zen and natural beauty of Big Sur at Pacific Trails Resort.">
-    <link rel="stylesheet" href="stylesheets/pacific.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Pacific Trails Resort offers you glamping in spacious and well-appointed private Yurts. All luxury campsites have an ocean view. Enjoy the zen and natural beauty of Big Sur at Pacific Trails Resort."
+    />
+    <link rel="stylesheet" href="stylesheets/pacific.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link href="sticky-footer-navbar.css" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Pacific Trails Resort</h1>
+      <h1>Pacific Trails Resort</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="yurts.html">Yurts</a></li>
-            <li><a href="activities.html">Activities</a></li>
-            <li><a href="reservations.html">Reservations</a></li>
-            <li><a href="shop.html">Shop</a></li>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <a class="navbar-brand" href="#">Pacific Trails Resort</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarCollapse"
+        aria-controls="navbarCollapse"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="yurts.html">Yurts</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="activities.html">Activities</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link active" href="reservations.html">Reservations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="shop.html">Shop</a>
+          </li>
         </ul>
+      </div>
     </nav>
 
     <main>
-        <h2>Reservations at Pacific Trails</h2>
-        <h3>Contact Us</h3>
-        <p>Required information is marked with an asterisk (*).</p>
-        <form method="post" action="https://webdevbasics.net/scripts/pacific.php">
-            <label for="fnameField"> * First Name: </label><input type="text" id="fnameField" name="fnameField"
-                required>
-            <label for="lnameField"> * Last Name: </label><input type="text" id="lnameField" name="lnameField" required>
-            <label for="emailField">* E-mail: </label><input type="email" id="emailField" name="emailField" required>
-            <label for="dateField">Arrival Date: </label><input type="date" id="dateField" name="dateField">
-            <label for="nightsField">Nights: </label><input type="number" id="nightsField" name="nightsField" min="1"
-                max="14">
-            <label for="commentsField"> Comments: </label><textarea id="commentsField" name="commentsField" rows="2"
-                cols="20"></textarea>
-            <input type="submit" value="Submit">
-        </form>
-
+      <h2>Reservations at Pacific Trails</h2>
+      <h3>Contact Us</h3>
+      <p>Required information is marked with an asterisk (*).</p>
+      <form method="post" action="https://webdevbasics.net/scripts/pacific.php">
+        <label for="fnameField"> * First Name: </label
+        ><input type="text" id="fnameField" name="fnameField" required />
+        <label for="lnameField"> * Last Name: </label
+        ><input type="text" id="lnameField" name="lnameField" required />
+        <label for="emailField">* E-mail: </label
+        ><input type="email" id="emailField" name="emailField" required />
+        <label for="dateField">Arrival Date: </label
+        ><input type="date" id="dateField" name="dateField" />
+        <label for="nightsField">Nights: </label
+        ><input
+          type="number"
+          id="nightsField"
+          name="nightsField"
+          min="1"
+          max="14"
+        />
+        <label for="commentsField"> Comments: </label
+        ><textarea
+          id="commentsField"
+          name="commentsField"
+          rows="2"
+          cols="20"
+        ></textarea>
+        <input type="submit" value="Submit" />
+      </form>
     </main>
     <footer>
-        Copyright &copy; 2024 Pacific Trails Resort<br>
-        <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+      Copyright &copy; 2024 Pacific Trails Resort<br />
+      <a href="mailto:yourfirstname@yourlastname.com"
+        >yourfirstname@yourlastname.com</a
+      >
     </footer>
-
-</body>
-
+  </body>
 </html>
