added zebra striping to table

--- a/yurts.html
+++ b/yurts.html
@@ -84,7 +84,7 @@
         and contact us to begin your reservation. We’re happy to build a custom
         package just for you!
       </p>
-      <table>
+      <table class="table table-striped">
         <thead>
           <tr>
             <th>Package Name</th>
