--- a/reservations.html
+++ b/reservations.html
@@ -60,31 +60,87 @@
       <h2>Reservations at Pacific Trails</h2>
       <h3>Contact Us</h3>
       <p>Required information is marked with an asterisk (*).</p>
-      <form method="post" action="https://webdevbasics.net/scripts/pacific.php">
-        <label for="fnameField"> * First Name: </label
-        ><input type="text" id="fnameField" name="fnameField" required />
-        <label for="lnameField"> * Last Name: </label
-        ><input type="text" id="lnameField" name="lnameField" required />
-        <label for="emailField">* E-mail: </label
-        ><input type="email" id="emailField" name="emailField" required />
-        <label for="dateField">Arrival Date: </label
-        ><input type="date" id="dateField" name="dateField" />
-        <label for="nightsField">Nights: </label
-        ><input
-          type="number"
-          id="nightsField"
-          name="nightsField"
-          min="1"
-          max="14"
-        />
-        <label for="commentsField"> Comments: </label
-        ><textarea
-          id="commentsField"
-          name="commentsField"
-          rows="2"
-          cols="20"
-        ></textarea>
-        <input type="submit" value="Submit" />
+      <form
+        method="post"
+        action="https://webdevbasics.net/scripts/pacific.php"
+        class="needs-validation"
+        novalidate
+      >
+        <div class="row">
+          <div class="col-md-6">
+            <label for="fnameField"> * First Name: </label
+            ><input
+              type="text"
+              id="fnameField"
+              name="fnameField"
+              required
+              class="form-control"
+              placeholder="First Name"
+            />
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please provide your First Name</div>
+          </div>
+          <div class="col-md-6">
+            <label for="lnameField"> * Last Name: </label
+            ><input
+              type="text"
+              id="lnameField"
+              name="lnameField"
+              required
+              class="form-control"
+              placeholder="Last Name"
+            />
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please provide your Last Name</div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <label for="emailField">* E-mail: </label
+            ><input
+              type="email"
+              id="emailField"
+              name="emailField"
+              required
+              class="form-control"
+              placeholder="Email"
+            />
+            <div class="valid-feedback">Looks good!</div>
+            <div class="invalid-feedback">Please provide your Email</div>
+          </div>
+          <div class="col">
+            <label for="dateField">Arrival Date: </label
+            ><input
+              type="date"
+              id="dateField"
+              name="dateField"
+              class="form-control"
+            />
+          </div>
+          <div class="col">
+            <label for="nightsField">Nights: </label
+            ><input
+              type="number"
+              id="nightsField"
+              name="nightsField"
+              min="1"
+              max="14"
+              class="form-control"
+            />
+          </div>
+        </div>
+        <div class="row">
+          <label for="commentsField"> Comments: </label
+          ><textarea
+            id="commentsField"
+            name="commentsField"
+            rows="3"
+            cols="20"
+          ></textarea>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary" />Submit Form
+        </div>
       </form>
     </main>
     <footer>
@@ -93,5 +149,36 @@
         >yourfirstname@yourlastname.com</a
       >
     </footer>
+    <script>
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (function () {
+        "use strict";
+        window.addEventListener(
+          "load",
+          function () {
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            var forms = document.getElementsByClassName("needs-validation");
+            // Loop over them and prevent submission
+            var validation = Array.prototype.filter.call(
+              forms,
+              function (form) {
+                form.addEventListener(
+                  "submit",
+                  function (event) {
+                    if (form.checkValidity() === false) {
+                      event.preventDefault();
+                      event.stopPropagation();
+                    }
+                    form.classList.add("was-validated");
+                  },
+                  false
+                );
+              }
+            );
+          },
+          false
+        );
+      })();
+    </script>
   </body>
 </html>
